# db-kr-platform-fighter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
dependencies/: CMakeLists.txt
src/: aabb.cpp  aabb.hpp  approx_math.hpp  components.hpp  fighter_state.cpp  fighter_state.hpp  fixed.cpp  fixed.hpp  input.cpp  input.hpp  main.cpp  prefabs.hpp  snapshot.hpp  util.hpp
src/data/: characters.cpp  characters.h  interface.h
src/data/characters/: experiment.cpp  experiment.h
src/systems/: collision_update.hpp  imgui_debug.hpp  input_update.cpp  input_update.hpp  position_update.hpp  render.hpp  reset_collision_flags.hpp  systems.hpp  update.hpp  update_hitbox_position.hpp  update_remove_after_lifetime.hpp
test/: CMakeLists.txt  fixed.cpp  main.cpp
